2010-07-27 David Tardon

	* Fix broken config.xcu to work with stricter validation in OOo 3.3.

2010-05-31 Harri Pitkänen <hatapitk@iki.fi>

	* Switch to new libvoikko 3.0 API (Trac #11).
	* Ignoring grammar checker rules works (Trac #12).

2010-05-07 Harri Pitkänen <hatapitk@iki.fi>

	* Add license attribute that allows suppressing the license dialog with
	  unopkg --suppress-license.

2010-04-23 Harri Pitkänen <hatapitk@iki.fi>

	* Remove references to malaga and glib libraries for Windows and OS X.
	* Increase version number to 3.1.1.

2010-01-05 Harri Pitkänen <hatapitk@iki.fi>

	* Fix error handling for cases where configuration is somehow damaged.
	  Partially fixes SF.net bug #2919454.

2009-10-26 Harri Pitkänen <hatapitk@iki.fi>

	* Reduce scope of a variable to fix cppcheck warning.

2009-10-04 Harri Pitkänen <hatapitk@iki.fi>

	* Re-enable grammar checker on Windows, since it works when libvoikko
	  has been built with MSVC.
	* Document the fact that MSVC should be used for building libvoikko on
	  Windows. Change the build system so that libvoikko-1.def -> libvoikko-1.lib
	  conversion is no longer done, because MSVC creates libvoikko-1.lib automatically.
	* Allow copying entire directories when creating standalone extensions. Update
	  the names of files to be copied for libvoikko 2.2.

2009-07-27 Petr Mladek

	* Change order of linker flags on Linux to enable building with
	  -Wl,--as-needed.

2009-05-15 Harri Pitkänen <hatapitk@iki.fi>

	* Replace the icon with something less irritating and add
	  svg version.

2009-04-11 Harri Pitkänen <hatapitk@iki.fi>

	* Implement listing of available dictionaries in standalone
	  extensions.

2009-04-05 Harri Pitkänen <hatapitk@iki.fi>

	* Print debug info to stderr instead of stdout to avoid
	  buffering.

2009-03-15 Harri Pitkänen <hatapitk@iki.fi>

	* Enable VOIKKO_OPT_ACCEPT_BULLETED_LISTS_IN_GC to silence
	  false positives in bulleted lists.

2009-03-15 Harri Pitkänen <hatapitk@iki.fi>
