@@ -1,3 +1,7 @@
+2010-12-22 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Add support for spell checking multiple languages.
+
 2010-07-27 David Tardon
 
 	* Fix broken config.xcu to work with stricter validation in OOo 3.3.
